--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -527,3 +527,13 @@ footer {
   }
 }
 
+@keyframes modalclose {
+    from {
+        opacity: 1;
+    }
+    to {
+      
+      opacity: 0;
+      transform: translateY(0px);
+    }
+  }
