Message when wrong input

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -536,3 +536,11 @@ footer {
       opacity: 0;
     }
   }
+
+
+  .error {
+      color: red;
+      text-align: end;
+      font-size: small;
+      margin: 6px 0;
+  }
