Form confirmation reset

--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -171,6 +171,7 @@ main {
 
 .form-confirmation {
   display: none;
+  flex-direction: column;
   z-index: 2;
   font-size: 36px;
   margin: 5% auto;
