--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -169,12 +169,6 @@ main {
   background-color: rgba(26, 39, 156, 0.4);
 }
 
-.form-confirmation {
-  display: none;
-  flex-direction: column;
-  font-size: 36px;
-}
-
 .content {
   margin: 5% auto;
   width: 100%;
@@ -192,6 +186,22 @@ main {
 .modal-body {
   padding: 15px 8%;
   margin: 15px auto;
+}
+
+.form-confirmation {
+    display: none;
+    flex-direction: column;
+    font-size: 36px;
+    padding: 18px 100px;
+    height: 797px;
+    justify-content: center;
+}
+
+.confirmation-message {
+    display: flex;
+    flex: 1;
+    align-items: center;
+    text-align: center;
 }
 
 label {
