--- a/starterOnly/modal.css
+++ b/starterOnly/modal.css
@@ -198,7 +198,7 @@ main {
     display: none;
     flex-direction: column;
     font-size: 36px;
-    padding: 18px 100px;
+    padding: 18px 8%;
     height: 797px;
     justify-content: center;
 }
